# goes-imagery

./: README.md  pyproject.toml
goes_imagery/: __init__.py  cli.py  config.py  fetcher.py  processor.py
